<resources>
    <string name="app_name">BaseAndroidProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="placeholder_text">What would you like to do</string>
    <string name="btn_logout">Logout</string>
    <string name="mystery_button">Mystery Button</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="password_hint">Password</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="dont_have_account_hint">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error_message">Error: %1$s</string>
    <string name="login_successful_message">Login Successful</string>
    <string name="login_exception_message">%1$s</string>
    <string name="repeat_password_placeholder">Repeat Password</string>
    <string name="some_fields_are_not_valid">Some fields are not valid</string>
    <string name="check_our_users">Check our users</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_details">Save Details</string>
    <string name="load_details">Load Details</string>
    <string name="user_details">User Details</string>
    <string name="connected">Connected</string>
    <string name="offline">Offline</string>
    <string name="retry">RETRY</string>
    <string name="enter_valid_email_and_password">Enter valid email and password</string>
    <string name="category">Category</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="suggestions">Suggestions</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="default_notification_channel_id">NotificationsChannel</string>
    <string name="upload_photo">Upload Photo</string>
</resources>